--- a/styles/base.less
+++ b/styles/base.less
@@ -17,6 +17,10 @@ html, body {
   height: 100%;
 }
 
+img {
+  border: none;
+}
+
 #game {
   height: 100%;
 }
